# doca

./: .gitignore  CODEBASE.md  FILE_STRUCTURE.md  LICENSE  PLAN.md  README.md  SKILL.md  bts.jsonc  package.json  turbo.json
.github/workflows/: deploy.yml
apps/ai-trainer/: .gitignore  dataset_creation.py  pyproject.toml  unified_extractor.py  visualize_data.py
apps/ai-trainer/src/: export_artifacts.py  optimize_multi_seq.py  preprocess.py
apps/ai-trainer/src/bins/data_extractor/: __init__.py  core.py  utils.py
apps/ai-trainer/src/bins/data_visualization/: __init__.py  core.py
apps/ai-trainer/src/swell/: load_data.py  train_xgboost.py
apps/ai-trainer/src/tuning/: swell_optimize.py  wesad_optimize.py
apps/ai-trainer/src/wesad/: load_data.py  train_xgboost.py
apps/landing-page/: .cta.json  .env.example  .gitignore  README.md  contact.html  index.html  package.json  tsr.config.json  vite.config.ts
apps/landing-page/public/: robots.txt  sitemap.xml
apps/landing-page/scripts/: generate-sitemap.ts  optimize-images.ts
apps/landing-page/src/: app.html  globals.css  styles.css
apps/model-trainer/: colab_train.ipynb  main.py
apps/model-trainer/src/: config.py  main.py
apps/native/: .gitignore  app.json  babel.config.js  eas.json  global.css  index.js  metro.config.js  package.json  tsconfig.json
apps/native/app/: +html.tsx  +not-found.tsx  _layout.tsx  index.tsx
apps/native/components/: OAuthButtons.tsx  sign-out-button.tsx
apps/native/hooks/: use-attendance-tracker.ts  use-livekit-room.native.ts  (+2 more)
apps/server/: package.json  tsconfig.json  tsdown.config.ts
apps/stress-predictor-service/: main.py  package.json  pyproject.toml
apps/web/: FEATURE_MAP.md  REFACTOR_AUDIT.md  components.json  globals.d.ts  package.json  tsconfig.json
apps/youtube-suggestion-scraper/: main.py  pyproject.toml  videos.json
knowledge-base/: AI System.md  Crisis Safety System.md  Database.canvas  IOT Device.md  Product.md  Research-Biometric-Reaction.canvas  Research.canvas
knowledge-base/.obsidian/: workspace.json
(+316 files in other folders)
