[project]
name = "ai-trainer"
version = "0.1.0"
description = "AI Trainer for ZenDoc biometric data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.21.0",
]

[project.scripts]
extract-data = "src.bins.data_extractor:main"
visualize-data = "src.bins.data_visualization:main"

[tool.setuptools]
py-modules = ["dataset_creation", "visualize_data"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
